--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.22.0",
-    "bootstrap": "^5.1.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "bootstrap": "5.2.1",
+    "react": "18.2.0",
+    "react-bootstrap": "2.5.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-bootstrap": "^0.25.0",
+    "react-router-bootstrap": "0.26.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
