axios dependecy removed + styles + fetchFilm.js deleted styles: max-height for SingleCharacter and SingleShip page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "0.22.0",
     "bootstrap": "5.2.1",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
@@ -19,16 +18,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "extends": ["react-app"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
