--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "5.2.1",
-    "node-sass": "8.0.0",
     "react": "18.2.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "5.0.1",
+    "sass": "^1.57.1"
   },
   "scripts": {
     "start": "react-scripts start",
