--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "csbbust": "1.0.1",
     "hooks": "0.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
