Feature: add hover styles for header icons and remove unused files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.wordWrap": "on",
-  "editor.fontSize": 12,
+  "editor.fontSize": 14,
   "editor.lineHeight": 22,
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.guides.bracketPairs": true
 }
