--- a/package.json
+++ b/package.json
@@ -1,37 +1,43 @@
 {
-  "name": "starwars-miniproject",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "csbbust": "1.0.1",
-    "hooks": "0.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.4.2",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.57.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "starwars-miniproject",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"csbbust": "1.0.1",
+		"hooks": "0.3.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-router-dom": "6.4.2",
+		"react-scripts": "^5.0.1",
+		"sass": "^1.57.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"jest": "^27.5.1"
+	}
 }
